--- a/Super_Market/Super_Market.vbproj
+++ b/Super_Market/Super_Market.vbproj
@@ -114,21 +114,47 @@
     <Compile Include="Edit Customer.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Item Master.Designer.vb">
+      <DependentUpon>Item Master.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Item Master.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Login.Designer.vb">
       <DependentUpon>Login.vb</DependentUpon>
     </Compile>
     <Compile Include="Login.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="super_marketDataSet.Designer.vb">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>super_marketDataSet.xsd</DependentUpon>
+    <Compile Include="Planning.Designer.vb">
+      <DependentUpon>Planning.vb</DependentUpon>
     </Compile>
-    <Compile Include="super_marketDataSet1.Designer.vb">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>super_marketDataSet1.xsd</DependentUpon>
+    <Compile Include="Planning.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Production Formula.Designer.vb">
+      <DependentUpon>Production Formula.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Production Formula.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProductMaster.Designer.vb">
+      <DependentUpon>ProductMaster.vb</DependentUpon>
+    </Compile>
+    <Compile Include="ProductMaster.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Purchase Order.Designer.vb">
+      <DependentUpon>Purchase Order.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Purchase Order.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StockMaster.Designer.vb">
+      <DependentUpon>StockMaster.vb</DependentUpon>
+    </Compile>
+    <Compile Include="StockMaster.vb">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="Super_Market_Management_System.vb">
       <SubType>Form</SubType>
@@ -151,6 +177,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <Compile Include="Suppliermaster.Designer.vb">
+      <DependentUpon>Suppliermaster.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Suppliermaster.vb">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="user.Designer.vb">
       <DependentUpon>user.vb</DependentUpon>
@@ -175,8 +207,26 @@
     <EmbeddedResource Include="Edit Customer.resx">
       <DependentUpon>Edit Customer.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Item Master.resx">
+      <DependentUpon>Item Master.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Planning.resx">
+      <DependentUpon>Planning.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Production Formula.resx">
+      <DependentUpon>Production Formula.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProductMaster.resx">
+      <DependentUpon>ProductMaster.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Purchase Order.resx">
+      <DependentUpon>Purchase Order.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StockMaster.resx">
+      <DependentUpon>StockMaster.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Super_Market_Management_System.resx">
       <DependentUpon>Super_Market_Management_System.vb</DependentUpon>
@@ -186,6 +236,9 @@
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Suppliermaster.resx">
+      <DependentUpon>Suppliermaster.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="user.resx">
       <DependentUpon>user.vb</DependentUpon>
@@ -202,28 +255,6 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="App.config" />
-    <None Include="super_marketDataSet.xsc">
-      <DependentUpon>super_marketDataSet.xsd</DependentUpon>
-    </None>
-    <None Include="super_marketDataSet.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>super_marketDataSet.Designer.vb</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="super_marketDataSet.xss">
-      <DependentUpon>super_marketDataSet.xsd</DependentUpon>
-    </None>
-    <None Include="super_marketDataSet1.xsc">
-      <DependentUpon>super_marketDataSet1.xsd</DependentUpon>
-    </None>
-    <None Include="super_marketDataSet1.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>super_marketDataSet1.Designer.vb</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="super_marketDataSet1.xss">
-      <DependentUpon>super_marketDataSet1.xsd</DependentUpon>
-    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
